fixed returned pages (sort/size)